2007-07-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Require rhpl (#248953).  New release.

2007-07-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-07-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (_preprocessStateMachine, preprocessFromString,
	preprocessKickstart):  Don't take a "self" parameter since these
	methods don't live in a class anymore.

2007-07-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-07-16  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (_preprocessStateMachine, preprocessFromString,
	preprocessKickstart):  Add methods that handle the %ksappend
	directive.  This is taken from anaconda.
	* validator/ksvalidator:  Run the kickstart file through
	preprocessKickstart before parsing for real.

	* pykickstart/commands/ignoredisk.py:  Change destination of --disks
	parameter to match what is expected.

2007-07-16  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-07-16  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/ignoredisk.py:  RHEL4 supports --only-use too.

2007-07-11  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/ignoredisk.py (F8_IgnoreDisk):  Add support
	for the --only-use argument.
	* pykickstart/handlers/control.py:  Use F8_IgnoreDisk for F8.

2007-07-10  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/raid.py:  Need to pass "self" as the first
	argument to superclass methods (#246709).

2007-06-08  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Fix package review problems (#226334).  Bump
	release.

2007-06-07  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/rootpw.py (F8_RootPw):  Add support for the
	--lock and --plaintext options for rootpw (#240059).
	* pykickstart/commands/user.py (F8_UserData, F8_User):  Likewise for
	the user command.