@@ -1,3 +1,8 @@
+2007-07-20  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/commands/network.py:  Change --class to --dhcpclass in
+	all parse methods (#248912).
+
 2007-07-19  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart.spec:  Require rhpl (#248953).  New release.
